@@ -19,6 +19,7 @@
     </configurations>
 
     <dependencies>
+        <dependency force="true" org="org.dellroad" name="dellroad-stuff" rev="1.0.946" conf="javac,test->default"/>
         <dependency force="true" org="org.testng" name="testng" rev="6.8+" conf="test->default"/>
     </dependencies>
 
