@@ -1,0 +1,52 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<HL7>
+  <MESSAGE>
+    <MSH>
+      <MSH.1>|</MSH.1>
+      <MSH.2>^~\&amp;</MSH.2>
+      <MSH.3>ST01</MSH.3>
+      <MSH.4>B</MSH.4>
+      <MSH.5>IM</MSH.5>
+      <MSH.6>B</MSH.6>
+      <MSH.7>20061211154319</MSH.7>
+      <MSH.8/>
+      <MSH.9>
+        <MSH.9.1>ADT</MSH.9.1>
+        <MSH.9.2>A08</MSH.9.2>
+      </MSH.9>
+      <MSH.10>6917898</MSH.10>
+      <MSH.11>P</MSH.11>
+      <MSH.12>2.2</MSH.12>
+      <MSH.13>6917898</MSH.13>
+      <MSH.14/>
+      <MSH.15>AL</MSH.15>
+      <MSH.16/>
+      <MSH.17/>
+      <MSH.18/>
+      <MSH.19/>
+      <MSH.20/>
+      <MSH.21/>
+      <MSH.22>2.2b</MSH.22>
+    </MSH>
+    <ZAX>
+      <ZAX.1/>
+      <ZAX.1>foo</ZAX.1>
+      <ZAX.1/>
+      <ZAX.2>
+        <ZAX.2.1>foo</ZAX.2.1>
+        <ZAX.2.2/>
+        <ZAX.2.3/>
+      </ZAX.2>
+      <ZAX.3>
+        <ZAX.3.1>
+          <ZAX.3.1.1>foo</ZAX.3.1.1>
+          <ZAX.3.1.2>bar</ZAX.3.1.2>
+          <ZAX.3.1.3/>
+          <ZAX.3.1.4/>
+        </ZAX.3.1>
+      </ZAX.3>
+      <ZAX.4/>
+      <ZAX.5/>
+    </ZAX>
+  </MESSAGE>
+</HL7>
