@@ -1,3 +1,7 @@
+Version Next
+
+    - Added XMLStreamWriter support to XMLConverter
+
 Version 1.0.18 Released September 19, 2014
 
     - Accept ACK's containing an MSH.9.2 sub-field
